[FIX] mass_mailing_themes: remove unnecessary white border around column
When properly background-coloring the columns from white to any other
color, a thin white border appeared which then becomes out of place.
This removes it.

--- a/mass_mailing_themes/static/src/scss/themes/theme_airmail.scss
+++ b/mass_mailing_themes/static/src/scss/themes/theme_airmail.scss
@@ -142,8 +142,6 @@ $o-mm-airmail-color-6: #a17e92;
             margin: 0 $tmp-gap;
 
             div:first-child {
-                border-top: 1px solid darken($o-mm-airmail-color-2, 10%);
-                border-bottom: 1px solid darken($o-mm-airmail-color-1, 5%);
                 background-color: $o-mm-airmail-color-2;
 
                 > * {
